# vax-check

./: .env.example  .gitignore  IMPLEMENTATION_REPORT.md  README.md  docker-compose.dev.yml  docker-compose.yml  kb_implemetatiob.md  pyproject.toml  run.ps1  run.sh  start.sh
backend/: Dockerfile
data/: vaxcheck.db-shm  vaxcheck.db-wal
docs/: IMPLEMENTATION_PROMPT.md  PROJECT_HANDOFF.md  vaccination_schedule_2026.yaml
frontend/: Dockerfile  next.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json  webpack-runtime.js
kb/: README.md  aggiornamento.md
kb/DE/: impfplan_2026.yaml  impfstoff_katalog.yaml  risikogruppen.yaml
kb/IT/: risk_groups.yaml  vaccines_catalog.yaml
scripts/: demo_clara.py  seed_db.py  test_gemini_ocr.py
src/vaxcheck/: __init__.py
tests/: conftest.py
tests/fixtures/: clara_booklet.json
tests/integration/: test_repositories.py
tests/parity/: test_engines_parity.py
tests/unit/: test_deterministic_engine.py  test_kb_loader.py  test_llm_engine.py  test_mappers.py  test_models.py  test_normalizer.py  test_ocr_anonymizer.py  test_ocr_extractor.py  test_ocr_normalizer.py  test_persistence_models.py
(+198 files in other folders)
