[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaxcheck"
version = "0.1.0"
description = "On-premise Swiss vaccination compliance analysis system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "anthropic>=0.20",
    "httpx>=0.25",
    "sqlalchemy>=2.0",
    "streamlit>=1.28",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP042"]

[tool.ruff.lint.isort]
known-first-party = ["vaxcheck"]

[tool.mypy]
strict = true
python_version = "3.11"
namespace_packages = false

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vaxcheck.domain.person"
disable_error_code = ["prop-decorator"]

[[tool.mypy.overrides]]
module = "vaxcheck.rule_engine.llm.engine"
disable_error_code = ["no-any-return", "arg-type"]

[[tool.mypy.overrides]]
module = "vaxcheck.rule_engine.llm.providers.*"
disable_error_code = ["no-any-return", "call-overload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
